--- a/public/home.html
+++ b/public/home.html
@@ -20,6 +20,9 @@
                 <span class="logo-subtitle">Partito Socialista Italiano</span>
             </div>
             <nav class="nav-menu" id="navMenu">
+                <button class="mobile-menu-close" id="mobileMenuClose">
+                    <i class="fas fa-times"></i>
+                </button>
                 <a href="#" class="nav-link">Home</a>
                 <a href="#storia" class="nav-link">Storia</a>
                 <a href="#iscriviti" class="nav-link">Iscriviti</a>
@@ -214,32 +217,5 @@
     </footer>
 
     <script src="/js/main.js"></script>
-    <script>
-    // Hamburger menu mobile
-    const hamburgerBtn = document.getElementById('hamburgerBtn');
-    const navMenu = document.getElementById('navMenu');
-    const mobileOverlay = document.getElementById('mobileOverlay');
-
-    hamburgerBtn.addEventListener('click', function() {
-        navMenu.classList.toggle('open');
-        hamburgerBtn.classList.toggle('open');
-        mobileOverlay.classList.toggle('show');
-        document.body.classList.toggle('no-scroll');
-    });
-    mobileOverlay.addEventListener('click', function() {
-        navMenu.classList.remove('open');
-        hamburgerBtn.classList.remove('open');
-        mobileOverlay.classList.remove('show');
-        document.body.classList.remove('no-scroll');
-    });
-    document.querySelectorAll('.nav-link').forEach(link => {
-        link.addEventListener('click', () => {
-            navMenu.classList.remove('open');
-            hamburgerBtn.classList.remove('open');
-            mobileOverlay.classList.remove('show');
-            document.body.classList.remove('no-scroll');
-        });
-    });
-    </script>
 </body>
 </html>
